infra-core/acs/sensor-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sensor
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 3.73.1
    helm.sh/chart: sensor-73.1.0
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: collector
      - podSelector:
          matchLabels:
            service: collector
      - podSelector:
          matchLabels:
            app: admission-control

    ports:
    - port: 8443
      protocol: TCP
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      app: sensor
  policyTypes:
    - Ingress
